# CPP-runner-docker

./: .gitignore  CROSS_PLATFORM_GUIDE.md  Dockerfile  README.md  entrypoint.sh  run_interactive.bat  run_interactive.ps1  run_interactive.sh
.github/: copilot-instructions.md
student_projects/project_group_1/: main.cpp
student_projects/project_group_2/: calculator.cpp  calculator.h  main.cpp
student_projects/project_group_3/: CMakeLists.txt  main.cpp  math_utils.cpp  math_utils.h  string_utils.cpp  string_utils.h
